docs/v1.3.0/zh/api/catalog-ui.md
---
title: Gauntlet UI 类目录 / Class Catalog
sidebar: auto
---

# Gauntlet UI 类目录

## 心智模型

先把 `Gauntlet UI 类目录` 当作这个子系统的入口或数据节点来理解：先看属性代表什么状态，再看方法允许你做什么。

本页列出 1.3.0 源码中该领域全部公开类型，按命名空间分组。共 **179** 个类型，其中 **177** 个已有深度文档页（带链接）。由 `tools/gen-class-catalog.mjs` 从源码自动生成。

> 图例：C=class S=struct I=interface E=enum。带 🔗 的已有深度文档页。

## TaleWorlds.GauntletUI (54)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | [AlignmentAxis](/v1.3.15/zh/api/campaign-ext/AlignmentAxis.md) | 🔗 |
| C | [AnimatedDropdownWidget](/v1.3.15/zh/api/campaign-ext/AnimatedDropdownWidget.md) | 🔗 |
| C | [AnimationInterpolation](/v1.3.15/zh/api/campaign-ext/AnimationInterpolation.md) | 🔗 |
| C | [AudioProperty](/v1.3.15/zh/api/campaign-ext/AudioProperty.md) | 🔗 |
| C | [Brush](/v1.3.15/zh/api/campaign-ext/Brush.md) | 🔗 |
| C | [BrushAnimation](/v1.3.15/zh/api/campaign-ext/BrushAnimation.md) | 🔗 |
| C | [BrushAnimationKeyFrame](/v1.3.15/zh/api/campaign-ext/BrushAnimationKeyFrame.md) | 🔗 |
| C | [BrushAnimationProperty](/v1.3.15/zh/api/campaign-ext/BrushAnimationProperty.md) | 🔗 |
| E | [BrushAnimationPropertyType](/v1.3.15/zh/api/campaign-ext/BrushAnimationPropertyType.md) | 🔗 |
| C | [BrushFactory](/v1.3.15/zh/api/campaign-ext/BrushFactory.md) | 🔗 |
| C | [BrushLayer](/v1.3.15/zh/api/campaign-ext/BrushLayer.md) | 🔗 |
| C | [BrushLayerAnimation](/v1.3.15/zh/api/campaign-ext/BrushLayerAnimation.md) | 🔗 |
| E | [BrushLayerSizePolicy](/v1.3.15/zh/api/campaign-ext/BrushLayerSizePolicy.md) | 🔗 |
| S | [BrushLayerState](/v1.3.15/zh/api/campaign-ext/BrushLayerState.md) | 🔗 |
| C | [BrushListPanel](/v1.3.15/zh/api/campaign-ext/BrushListPanel.md) | 🔗 |
| E | [BrushOverlayMethod](/v1.3.15/zh/api/campaign-ext/BrushOverlayMethod.md) | 🔗 |
| C | [BrushRenderer](/v1.3.15/zh/api/campaign-ext/BrushRenderer.md) | 🔗 |
| E | [BrushRendererAnimationState](/v1.3.15/zh/api/campaign-ext/BrushRendererAnimationState.md) | 🔗 |
| S | [BrushState](/v1.3.15/zh/api/campaign-ext/BrushState.md) | 🔗 |
| C | [CircleActionSelectorWidget](/v1.3.15/zh/api/campaign-ext/CircleActionSelectorWidget.md) | 🔗 |
| C | [CircleItemPlacerWidget](/v1.3.15/zh/api/campaign-ext/CircleItemPlacerWidget.md) | 🔗 |
| C | [ContainerItemDescription](/v1.3.15/zh/api/campaign-ext/ContainerItemDescription.md) | 🔗 |
| C | [EditorAttribute](/v1.3.15/zh/api/campaign-ext/EditorAttribute.md) | 🔗 |
| C | [EventManager](/v1.3.15/zh/api/campaign-ext/EventManager.md) | 🔗 |
| C | [FontFactory](/v1.3.15/zh/api/campaign-ext/FontFactory.md) | 🔗 |
| E | [Function](/v1.3.15/zh/api/campaign-ext/Function.md) | 🔗 |
| C | [GauntletExtensions](/v1.3.15/zh/api/campaign-ext/GauntletExtensions.md) | 🔗 |
| E | [GuiEventResult](/v1.3.15/zh/api/campaign-ext/GuiEventResult.md) | 🔗 |
| E | [GuiEventType](/v1.3.15/zh/api/campaign-ext/GuiEventType.md) | 🔗 |
| E | [HorizontalAlignment](/v1.3.15/zh/api/campaign-ext/HorizontalAlignment.md) | 🔗 |
| I | [IBrushAnimationState](/v1.3.15/zh/api/campaign-ext/IBrushAnimationState.md) | 🔗 |
| I | [IBrushLayerData](/v1.3.15/zh/api/campaign-ext/IBrushLayerData.md) | 🔗 |
| I | [IDataSource](/v1.3.15/zh/api/campaign-ext/IDataSource.md) | 🔗 |
| I | [IDropContainer](/v1.3.15/zh/api/campaign-ext/IDropContainer.md) | 🔗 |
| C | [Language](/v1.3.15/zh/api/campaign-ext/Language.md) | 🔗 |
| E | [MouseCursors](/v1.3.15/zh/api/campaign-ext/MouseCursors.md) | 🔗 |
| C | [PropertyOwnerObject](/v1.3.15/zh/api/campaign-ext/PropertyOwnerObject.md) | 🔗 |
| C | [ResourceTextureProvider](/v1.3.15/zh/api/campaign-ext/ResourceTextureProvider.md) | 🔗 |
| E | [SizePolicy](/v1.3.15/zh/api/campaign-ext/SizePolicy.md) | 🔗 |
| C | [SoundProperties](/v1.3.15/zh/api/campaign-ext/SoundProperties.md) | 🔗 |
| C | [Style](/v1.3.15/zh/api/campaign-ext/Style.md) | 🔗 |
| E | [StyleAnimationMode](/v1.3.15/zh/api/campaign-ext/StyleAnimationMode.md) | 🔗 |
| C | [StyleLayer](/v1.3.15/zh/api/campaign-ext/StyleLayer.md) | 🔗 |
| C | [TextureProvider](/v1.3.15/zh/api/campaign-ext/TextureProvider.md) | 🔗 |
| C | [TextureProviderFactory](/v1.3.15/zh/api/campaign-ext/TextureProviderFactory.md) | 🔗 |
| E | Type | — |
| C | [UIContext](/v1.3.15/zh/api/campaign-ext/UIContext.md) | 🔗 |
| E | [ValueType](/v1.3.15/zh/api/campaign-ext/ValueType.md) | 🔗 |
| E | [VerticalAlignment](/v1.3.15/zh/api/campaign-ext/VerticalAlignment.md) | 🔗 |
| C | [VisualDefinition](/v1.3.15/zh/api/campaign-ext/VisualDefinition.md) | 🔗 |
| C | [VisualState](/v1.3.15/zh/api/campaign-ext/VisualState.md) | 🔗 |
| E | [VisualStateAnimationState](/v1.3.15/zh/api/campaign-ext/VisualStateAnimationState.md) | 🔗 |
| C | [WidgetComponent](/v1.3.15/zh/api/campaign-ext/WidgetComponent.md) | 🔗 |
| C | [WidgetInfo](/v1.3.15/zh/api/campaign-ext/WidgetInfo.md) | 🔗 |

## TaleWorlds.GauntletUI.BaseTypes (29)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AutoScrollParameters](/v1.3.15/zh/api/campaign-ext/AutoScrollParameters.md) | 🔗 |
| C | [BasicContainer](/v1.3.15/zh/api/campaign-ext/BasicContainer.md) | 🔗 |
| C | [BrushWidget](/v1.3.15/zh/api/campaign-ext/BrushWidget.md) | 🔗 |
| E | [ButtonType](/v1.3.15/zh/api/campaign-ext/ButtonType.md) | 🔗 |
| C | [ButtonWidget](/v1.3.15/zh/api/campaign-ext/ButtonWidget.md) | 🔗 |
| C | [Container](/v1.3.15/zh/api/campaign-ext/Container.md) | 🔗 |
| C | [DragCarrierWidget](/v1.3.15/zh/api/campaign-ext/DragCarrierWidget.md) | 🔗 |
| C | [DropdownWidget](/v1.3.15/zh/api/campaign-ext/DropdownWidget.md) | 🔗 |
| C | [EditableTextWidget](/v1.3.15/zh/api/campaign-ext/EditableTextWidget.md) | 🔗 |
| C | [FloatInputTextWidget](/v1.3.15/zh/api/campaign-ext/FloatInputTextWidget.md) | 🔗 |
| C | [GridWidget](/v1.3.15/zh/api/campaign-ext/GridWidget.md) | 🔗 |
| E | [ImageSizePolicies](/v1.3.15/zh/api/campaign-ext/ImageSizePolicies.md) | 🔗 |
| C | [ImageWidget](/v1.3.15/zh/api/campaign-ext/ImageWidget.md) | 🔗 |
| C | [IntegerInputPercentageTextWidget](/v1.3.15/zh/api/campaign-ext/IntegerInputPercentageTextWidget.md) | 🔗 |
| C | [IntegerInputTextWidget](/v1.3.15/zh/api/campaign-ext/IntegerInputTextWidget.md) | 🔗 |
| C | [ListPanel](/v1.3.15/zh/api/campaign-ext/ListPanel.md) | 🔗 |
| C | [MaskedTextureWidget](/v1.3.15/zh/api/campaign-ext/MaskedTextureWidget.md) | 🔗 |
| C | [OnlineImageTextureWidget](/v1.3.15/zh/api/campaign-ext/OnlineImageTextureWidget.md) | 🔗 |
| C | [RichTextWidget](/v1.3.15/zh/api/campaign-ext/RichTextWidget.md) | 🔗 |
| C | [ScrollablePanel](/v1.3.15/zh/api/campaign-ext/ScrollablePanel.md) | 🔗 |
| C | [ScrollablePanelFixedHeaderWidget](/v1.3.15/zh/api/campaign-ext/ScrollablePanelFixedHeaderWidget.md) | 🔗 |
| C | [ScrollbarWidget](/v1.3.15/zh/api/campaign-ext/ScrollbarWidget.md) | 🔗 |
| C | [SelectedStateBrushWidget](/v1.3.15/zh/api/campaign-ext/SelectedStateBrushWidget.md) | 🔗 |
| C | [SliderWidget](/v1.3.15/zh/api/campaign-ext/SliderWidget.md) | 🔗 |
| C | [TabControl](/v1.3.15/zh/api/campaign-ext/TabControl.md) | 🔗 |
| C | [TabToggleWidget](/v1.3.15/zh/api/campaign-ext/TabToggleWidget.md) | 🔗 |
| C | [TextureWidget](/v1.3.15/zh/api/campaign-ext/TextureWidget.md) | 🔗 |
| C | [TextWidget](/v1.3.15/zh/api/campaign-ext/TextWidget.md) | 🔗 |
| C | [Widget](/v1.3.15/zh/api/campaign-ext/Widget.md) | 🔗 |

## TaleWorlds.GauntletUI.Canvas (11)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Canvas](./campaign-ext/Canvas.md) | 🔗 |
| C | [CanvasElement](./campaign-ext/CanvasElement.md) | 🔗 |
| C | [CanvasImage](./campaign-ext/CanvasImage.md) | 🔗 |
| C | [CanvasLine](./campaign-ext/CanvasLine.md) | 🔗 |
| E | [CanvasLineAlignment](./campaign-ext/CanvasLineAlignment.md) | 🔗 |
| C | [CanvasLineElement](./campaign-ext/CanvasLineElement.md) | 🔗 |
| C | [CanvasLineImage](./campaign-ext/CanvasLineImage.md) | 🔗 |
| C | [CanvasLineText](./campaign-ext/CanvasLineText.md) | 🔗 |
| C | [CanvasObject](./campaign-ext/CanvasObject.md) | 🔗 |
| C | [CanvasTextBox](./campaign-ext/CanvasTextBox.md) | 🔗 |
| C | [CanvasWidget](./campaign-ext/CanvasWidget.md) | 🔗 |

## TaleWorlds.GauntletUI.Data (15)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | GauntletMovie | — |
| C | [GauntletView](/v1.3.15/zh/api/campaign-ext/GauntletView.md) | 🔗 |
| C | [GeneratedGauntletMovie](/v1.3.15/zh/api/campaign-ext/GeneratedGauntletMovie.md) | 🔗 |
| C | [GeneratedWidgetData](/v1.3.15/zh/api/campaign-ext/GeneratedWidgetData.md) | 🔗 |
| I | [IGauntletMovie](/v1.3.15/zh/api/campaign-ext/IGauntletMovie.md) | 🔗 |
| I | [IGeneratedGauntletMovieRoot](/v1.3.15/zh/api/campaign-ext/IGeneratedGauntletMovieRoot.md) | 🔗 |
| C | [ItemTemplateUsage](/v1.3.15/zh/api/campaign-ext/ItemTemplateUsage.md) | 🔗 |
| C | [ItemTemplateUsageWithData](/v1.3.15/zh/api/campaign-ext/ItemTemplateUsageWithData.md) | 🔗 |
| C | [PrefabDatabindingExtension](/v1.3.15/zh/api/campaign-ext/PrefabDatabindingExtension.md) | 🔗 |
| C | [WidgetAttributeKeyTypeCommand](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeCommand.md) | 🔗 |
| C | [WidgetAttributeKeyTypeCommandParameter](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeCommandParameter.md) | 🔗 |
| C | [WidgetAttributeKeyTypeDataSource](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeDataSource.md) | 🔗 |
| C | [WidgetAttributeValueTypeBinding](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeBinding.md) | 🔗 |
| C | [WidgetAttributeValueTypeBindingPath](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeBindingPath.md) | 🔗 |
| C | [WidgetInstantiationResultDatabindingExtension](/v1.3.15/zh/api/campaign-ext/WidgetInstantiationResultDatabindingExtension.md) | 🔗 |

## TaleWorlds.GauntletUI.ExtraWidgets (22)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AnimatedNumberTextWidget](/v1.3.15/zh/api/campaign-ext/AnimatedNumberTextWidget.md) | 🔗 |
| C | [CustomWidgetManager](/v1.3.15/zh/api/campaign-ext/CustomWidgetManager.md) | 🔗 |
| C | [DelayedStateChanger](/v1.3.15/zh/api/campaign-ext/DelayedStateChanger.md) | 🔗 |
| C | [DialogButtonsParentWidget](/v1.3.15/zh/api/campaign-ext/DialogButtonsParentWidget.md) | 🔗 |
| C | [FillBar](/v1.3.15/zh/api/campaign-ext/FillBar.md) | 🔗 |
| C | [FillBarHorizontalWidget](/v1.3.15/zh/api/campaign-ext/FillBarHorizontalWidget.md) | 🔗 |
| C | [FillBarVerticalClipTierColorsWidget](/v1.3.15/zh/api/campaign-ext/FillBarVerticalClipTierColorsWidget.md) | 🔗 |
| C | [FillBarVerticalClipWidget](/v1.3.15/zh/api/campaign-ext/FillBarVerticalClipWidget.md) | 🔗 |
| C | [FillBarVerticalWidget](/v1.3.15/zh/api/campaign-ext/FillBarVerticalWidget.md) | 🔗 |
| C | [FillBarWidget](/v1.3.15/zh/api/campaign-ext/FillBarWidget.md) | 🔗 |
| C | [InputKeyVisualWidget](/v1.3.15/zh/api/campaign-ext/InputKeyVisualWidget.md) | 🔗 |
| C | [MouseWidget](/v1.3.15/zh/api/campaign-ext/MouseWidget.md) | 🔗 |
| C | [ScrollingRichTextWidget](/v1.3.15/zh/api/campaign-ext/ScrollingRichTextWidget.md) | 🔗 |
| C | [ScrollingTextWidget](/v1.3.15/zh/api/campaign-ext/ScrollingTextWidget.md) | 🔗 |
| C | [SiblingIndexVisibilityWidget](/v1.3.15/zh/api/campaign-ext/SiblingIndexVisibilityWidget.md) | 🔗 |
| C | [SmoothDecreaseIndicatorFillBar](/v1.3.15/zh/api/campaign-ext/SmoothDecreaseIndicatorFillBar.md) | 🔗 |
| C | [StringBasedVisibilityWidget](/v1.3.15/zh/api/campaign-ext/StringBasedVisibilityWidget.md) | 🔗 |
| E | [TooltipPositioningType](/v1.3.15/zh/api/campaign-ext/TooltipPositioningType.md) | 🔗 |
| C | [TooltipWidget](/v1.3.15/zh/api/campaign-ext/TooltipWidget.md) | 🔗 |
| C | [TwoWaySliderWidget](/v1.3.15/zh/api/campaign-ext/TwoWaySliderWidget.md) | 🔗 |
| C | [ValueBasedVisibilityWidget](/v1.3.15/zh/api/campaign-ext/ValueBasedVisibilityWidget.md) | 🔗 |
| E | [WatchTypes](/v1.3.15/zh/api/campaign-ext/WatchTypes.md) | 🔗 |

## TaleWorlds.GauntletUI.ExtraWidgets.Graph (3)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GraphLinePointWidget](/v1.3.15/zh/api/campaign-ext/GraphLinePointWidget.md) | 🔗 |
| C | [GraphLineWidget](/v1.3.15/zh/api/campaign-ext/GraphLineWidget.md) | 🔗 |
| C | [GraphWidget](/v1.3.15/zh/api/campaign-ext/GraphWidget.md) | 🔗 |

## TaleWorlds.GauntletUI.GamepadNavigation (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GamepadNavigationForcedScopeCollection](/v1.3.15/zh/api/campaign-ext/GamepadNavigationForcedScopeCollection.md) | 🔗 |
| C | [GamepadNavigationScope](/v1.3.15/zh/api/campaign-ext/GamepadNavigationScope.md) | 🔗 |
| E | [GamepadNavigationTypes](/v1.3.15/zh/api/campaign-ext/GamepadNavigationTypes.md) | 🔗 |
| C | [GauntletGamepadNavigationManager](/v1.3.15/zh/api/campaign-ext/GauntletGamepadNavigationManager.md) | 🔗 |

## TaleWorlds.GauntletUI.GauntletInput (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GauntletInputContext](/v1.3.15/zh/api/campaign-ext/GauntletInputContext.md) | 🔗 |
| I | [IReadonlyInputContext](/v1.3.15/zh/api/campaign-ext/IReadonlyInputContext.md) | 🔗 |

## TaleWorlds.GauntletUI.Layout (10)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [DefaultLayout](/v1.3.15/zh/api/campaign-ext/DefaultLayout.md) | 🔗 |
| C | [DragCarrierLayout](/v1.3.15/zh/api/campaign-ext/DragCarrierLayout.md) | 🔗 |
| E | [GridDirection](/v1.3.15/zh/api/campaign-ext/GridDirection.md) | 🔗 |
| E | [GridHorizontalLayoutMethod](/v1.3.15/zh/api/campaign-ext/GridHorizontalLayoutMethod.md) | 🔗 |
| C | [GridLayout](/v1.3.15/zh/api/campaign-ext/GridLayout.md) | 🔗 |
| E | [GridVerticalLayoutMethod](/v1.3.15/zh/api/campaign-ext/GridVerticalLayoutMethod.md) | 🔗 |
| I | [ILayout](/v1.3.15/zh/api/campaign-ext/ILayout.md) | 🔗 |
| E | [LayoutMethod](/v1.3.15/zh/api/campaign-ext/LayoutMethod.md) | 🔗 |
| C | [StackLayout](/v1.3.15/zh/api/campaign-ext/StackLayout.md) | 🔗 |
| C | [TextLayout](/v1.3.15/zh/api/campaign-ext/TextLayout.md) | 🔗 |

## TaleWorlds.GauntletUI.PrefabSystem (26)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [ConstantDefinition](/v1.3.15/zh/api/campaign-ext/ConstantDefinition.md) | 🔗 |
| E | [ConstantDefinitionType](/v1.3.15/zh/api/campaign-ext/ConstantDefinitionType.md) | 🔗 |
| C | [CustomWidgetType](/v1.3.15/zh/api/campaign-ext/CustomWidgetType.md) | 🔗 |
| C | [GeneratedPrefabContext](/v1.3.15/zh/api/campaign-ext/GeneratedPrefabContext.md) | 🔗 |
| C | [GeneratedPrefabInstantiationResult](/v1.3.15/zh/api/campaign-ext/GeneratedPrefabInstantiationResult.md) | 🔗 |
| I | [IGeneratedUIPrefabCreator](/v1.3.15/zh/api/campaign-ext/IGeneratedUIPrefabCreator.md) | 🔗 |
| C | [PrefabExtension](/v1.3.15/zh/api/campaign-ext/PrefabExtension.md) | 🔗 |
| C | [PrefabExtensionContext](/v1.3.15/zh/api/campaign-ext/PrefabExtensionContext.md) | 🔗 |
| C | [VisualDefinitionTemplate](/v1.3.15/zh/api/campaign-ext/VisualDefinitionTemplate.md) | 🔗 |
| C | [VisualStateTemplate](/v1.3.15/zh/api/campaign-ext/VisualStateTemplate.md) | 🔗 |
| C | [WidgetAttributeContext](/v1.3.15/zh/api/campaign-ext/WidgetAttributeContext.md) | 🔗 |
| C | [WidgetAttributeKeyType](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyType.md) | 🔗 |
| C | [WidgetAttributeKeyTypeAttribute](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeAttribute.md) | 🔗 |
| C | [WidgetAttributeKeyTypeId](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeId.md) | 🔗 |
| C | [WidgetAttributeKeyTypeParameter](/v1.3.15/zh/api/campaign-ext/WidgetAttributeKeyTypeParameter.md) | 🔗 |
| C | [WidgetAttributeTemplate](/v1.3.15/zh/api/campaign-ext/WidgetAttributeTemplate.md) | 🔗 |
| C | [WidgetAttributeValueType](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueType.md) | 🔗 |
| C | [WidgetAttributeValueTypeConstant](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeConstant.md) | 🔗 |
| C | [WidgetAttributeValueTypeDefault](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeDefault.md) | 🔗 |
| C | [WidgetAttributeValueTypeParameter](/v1.3.15/zh/api/campaign-ext/WidgetAttributeValueTypeParameter.md) | 🔗 |
| C | [WidgetCreationData](/v1.3.15/zh/api/campaign-ext/WidgetCreationData.md) | 🔗 |
| C | [WidgetExtensions](/v1.3.15/zh/api/campaign-ext/WidgetExtensions.md) | 🔗 |
| C | [WidgetFactory](/v1.3.15/zh/api/campaign-ext/WidgetFactory.md) | 🔗 |
| C | [WidgetInstantiationResult](/v1.3.15/zh/api/campaign-ext/WidgetInstantiationResult.md) | 🔗 |
| C | [WidgetPrefab](/v1.3.15/zh/api/campaign-ext/WidgetPrefab.md) | 🔗 |
| C | [WidgetTemplate](/v1.3.15/zh/api/campaign-ext/WidgetTemplate.md) | 🔗 |

## TaleWorlds.GauntletUI.TooltipExtensions (3)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [PrefabTooltipExtension](./campaign-ext/PrefabTooltipExtension.md) | 🔗 |
| C | [TooltipExtensionWidget](./campaign-ext/TooltipExtensionWidget.md) | 🔗 |
| C | [WidgetAttributeKeyTypeHint](./campaign-ext/WidgetAttributeKeyTypeHint.md) | 🔗 |
